--- a/main.css
+++ b/main.css
@@ -118,9 +118,10 @@ table {
 }
 
 th, td {
-    padding-left: 10px;
-    padding-right: 15px;
-    line-height: 2;
+/*    padding-left: 10px;
+    padding-right: 15px;*/
+    padding: 10px;
+    line-height: 1.45;
 }
 
 th {
